got MFA working for CLI commands with preferred method and arg override
